# IndexMapping

./: MANIFEST.in  README.md  __init__.pxd  __init__.py  build_prj.py  mapc.c  mapcfunctions.c  mapcfunctions.pyx  mapping.c  mapping.pxd  mapping.pyx  requirements.txt  setup.cfg  setup.py  setup_mapping.py
test/: profiling.py  test_mapping.py  test_split.py
