[metadata]
name = IndexMapping
version = attr: mapping.__version__
author = Yoann Berenguer
author_email = yoyoberenguer@hotmail.com
url = https://github.com/yoyoberenguer/IndexMapping
description = 1D array transpose/conversion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords =
    Buffer
    transpose
    Array indexing
    1D array to 3D array
    3D array to 1D array
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Reports = https://github.com/yoyoberenguer/IndexMapping/issues
    Source      = https://github.com/yoyoberenguer/IndexMapping

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = IndexMapping

setup_requires =
    setuptools >=46.4.0
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    requirements.txt

[bdist_wheel]
universal = true

[sdist]
formats = zip





